# BitBurrow

./: README.md  pyproject.toml  setup.cfg  versions
app/: README.md  pubspec.yaml
app/android/app/: build.gradle
app/android/app/src/main/: AndroidManifest.xml
app/android/app/src/main/kotlin/com/bitburrow/app/app/: MainActivity.kt
app/android/app/src/profile/: AndroidManifest.xml
app/images/: CREDITS.md
app/integration_test/: app_test.dart
app/ios/Runner/: Info.plist
app/ios/Runner.xcodeproj/: project.pbxproj
app/lib/: bases_screen.dart  bb_proxy.dart  global.dart  hub_rpc.dart  json_chunks.dart  logger_manager.dart  main.dart  new_base_screen.dart  new_login_key_screen.dart  new_server_screen.dart  parent_form_state.dart  persistent_websocket.dart  servers_screen.dart  sign_in_screen.dart  step_box.dart  welcome_screen.dart
app/linux/: CMakeLists.txt  my_application.cc
app/test/: widget_test.dart
app/test/libs/persistent_websocket/dart/: persistent_websocket_test.dart  persistent_websocket_utils_test.dart
app/web/: index.html  manifest.json
base/emulator/: install.sh
git_hooks/: README.md  pre-commit
hub/: adopt5p.sh  api.py  auth.py  base_setup_steps.yaml  base_setup_tasks.yaml  bbbased.lua  config.py  configuration.py  db.py  door.py  hub.py  login_key.py  logs.py  messages.py  migrate_db.py  net.py  niceguidemo.py  pages.py  persistent_websocket.py  transmutation.py  ui.py  uif.py  util.py
hub/ui/: baseslist.md  code_field.js  configurerouter.md  confirm.md  corner_menue.js  css.css  device-not-found.md  home.md  index.md  login.md  login_sessions.md  manage.md  new_base.md  outer-HTML.html  setup-adopt.md  setup-adopt.yaml  setup-enable.md  setup-enable.yaml  setup.md  showloginkey.md  theme.css  welcome.md
hub/ui/img/: CREDITS.md  bitburrow.xcf
hub/web/: css.css  index.md  outer-HTML.html
hub_installer/: bbctl  config.yaml  devinstall.sh  install.yaml  preinstall.sh
libs/dart/persistent_websocket/: .gitignore  persistent_websocket.dart  test_client.dart
libs/persistent_websocket/dart/: persistent_websocket.dart
libs/persistent_websocket/python/: demo_client.py  persistent_websocket.py
libs/python/persistent_websocket/: persistent_websocket.py  python_to_dart.py  test_client.py
src/fauxpoint/: __init__.py  fauxpoint.py
src/hub/: __init__.py  db.py  hub.py  login_key.py  logs.py  server_setup_steps.yaml
src/hub_installer/: install.yaml
test_socketio_client/: main.py  pyproject.toml
test_ws_client/: pubspec.yaml  test_ws_client.py
tests/libs/persistent_websocket/python/: test_persistent_websocket.py  test_persistent_websocket_utils.py
