[tool.poetry]
name = "bitburrow"
version = "0.6.0"
description = "BitBurrow is a set of tools to help you set up and use a VPN base anywhere."
authors = ["bitinerant <bitinerant@users.noreply.github.com>"]
license = "AGPL-3.0-or-later"
readme = "README.md"
repository = "https://github.com/BitBurrow/BitBurrow"
documentation = "https://bitburrow.com/"
packages = [
    {include = "hub"},
    {include = "hub_installer"},
    {include = "libs/python/persistent_websocket"},
]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/BitBurrow/BitBurrow/issues"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.105"
platformdirs = "^3.0.0"
sqlmodel = "^0.0.14"
uvicorn = {extras = ["standard"], version = "^0.20.0"}
argon2-cffi = "^21.3.0"
PyYAML = "^6.0"
python-dateutil = "^2.8.2"
fastapi-restful = "^0.5.0"
json-rpc = "^1.15.0"

[tool.poetry.dev-dependencies]
black = "^23.1.0"

[tool.poetry.scripts]
bbhub = "hub.hub:entry_point"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
