[tool.poetry]
name = "bitburrow"
version = "0.7.0"
description = "BitBurrow is a set of tools to help you set up and use a VPN base anywhere."
authors = ["bitinerant <bitinerant@users.noreply.github.com>"]
license = "AGPL-3.0-or-later"
readme = "README.md"
repository = "https://github.com/BitBurrow/BitBurrow"
documentation = "https://bitburrow.com/"
packages = [
    {include = "hub"},
    {include = "hub_installer"},
]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/BitBurrow/BitBurrow/issues"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = ">=0.116.1"
platformdirs = "^3.0.0"
sqlmodel = "^0.0.14"
argon2-cffi = "^21.3.0"
PyYAML = "^6.0"
python-dateutil = "^2.8.2"
fastapi-restful = "^0.5.0"
typing-inspect = "^0.9.0"
pydantic = "^2.10.2"
htmy = "^0.7.4"
nicegui = "^3.2.0"

[tool.poetry.group.dev.dependencies]
black = "^24.3.0"
pytest = "^7.4.4"
pytest-asyncio = "^0.23.4"
pytest-timeout = "^2.3.1"

[tool.poetry.scripts]
bbhub = "hub.hub:entry_point"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
norecursedirs = "desktop"
asyncio_mode = "auto"

