[metadata]
name = fauxpoint
version = 0.4.0
author = bitinerant
author_email = bitinerant@users.noreply.github.com
description = Endpoint server for BitBurrow.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/bitinerant/fauxpoint
project_urls =
    Bug Tracker = https://github.com/bitinerant/fauxpoint/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
install_requires =
    fastapi[all]
    platformdirs
    slowapi
    sqlmodel
    uvicorn

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    fauxpoint = fauxpoint.fauxpoint:entry_point
