[metadata]
name = BitBurrow
version = 0.5.0
author = bitinerant
author_email = bitinerant@users.noreply.github.com
description = BitBurrow is a set of tools to help you set up and use a VPN server anywhere.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/BitBurrow/BitBurrow
project_urls =
    Bug Tracker = https://github.com/BitBurrow/BitBurrow/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9
install_requires =
    fastapi[all]
    platformdirs
    slowapi == 0.1.5
    sqlmodel
    uvicorn
    argon2

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    bbhub = hub.hub:entry_point

[options.package_data]
hub =
    *.yaml

